app/less/classes/transition-popup.less
@popup-transition-duration-in: @animation-duration-slow;
@popup-transition-duration-out: @animation-duration-fast;

.popup-transition-group {

    &.annotation, &.overview {
        .popup-wrapper {
            animation: bounceOut @popup-transition-duration-out;
        }

        &.visible {
            .popup-wrapper {
                animation: bounceIn @popup-transition-duration-in;
            }
        }
    }

    &.wiki, &.audio {
        .popup-wrapper {
            animation: shrinkOut @popup-transition-duration-out;
        }

        &.visible {
            .popup-wrapper {
                animation: shrinkIn @popup-transition-duration-in;
            }
        }
    }

    &.audio, &.score, &.wiki {
        z-index: @popup-content-z-index;
    }

    transition: opacity @popup-transition-duration-out;
    opacity: 0;

    &.visible {
        transition: opacity @popup-transition-duration-in;
        opacity: 1;
    }

    &.not-displayed {
        z-index: 0;
    }
}

